# object-pico-detect

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: clusterizer.rs  detector.rs  lib.rs  localizer.rs  multiscaler.rs  perturbator.rs  shaper.rs
benches/common/: macros.rs
examples/: print-init-shape.rs  run-pico-model.rs
examples/detect-faces/: args.rs  face.rs  main.rs  models.rs  shape.rs  utils.rs
src/: lib.rs
src/detect/: clusterize.rs  detection.rs  mod.rs  multiscale.rs  padding.rs
src/detect/detector/: mod.rs  tree.rs
src/geometry/: iou.rs  mod.rs  square.rs  target.rs
src/localize/: mod.rs  perturbate.rs
src/localize/localizer/: mod.rs
src/nodes/: comparison.rs  threshold.rs
src/shape/: delta.rs  forest.rs  mod.rs  tree.rs  utils.rs
src/traits/: region.rs
tests/: detector_test.rs  localizer_test.rs  shaper_test.rs
tests/common/: mod.rs
