[package]
name = "pico-detect"
version = "0.5.0"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
edition = "2018"
keywords = ["pico", "detection", "localization", "prediction"]
categories = ["computer-vision", "wasm"]
license = "MIT"
description = "Pixel Intensity Comparison-based Object (PICO) detection library."
repository = "https://github.com/rostyq/pico-detect"
readme = "README.md"
exclude = [
  "assets",
  "tests",
  "models",
  "examples",
  ".gitattributes"
]

[lib]
name = "pico_detect"
bench = false

[dependencies]
nalgebra = { 