[package]
name = "pico-detect"
version = "0.5.0"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
edition = "2018"
keywords = ["pico", "detection", "localization", "prediction"]
categories = ["computer-vision", "wasm"]
license = "MIT"
description = "Pixel Intensity Comparison-based Object (PICO) detection library."
repository = "https://github.com/rostyq/pico-detect"
readme = "README.md"
exclude = [
  "assets",
  "tests",
  "models",
  "examples",
  ".gitattributes"
]

[lib]
name = "pico_detect"
bench = false

[dependencies]
nalgebra = { version = "0.32.1", default-features = false, features = [ "std" ] }
image = { version = "0.25.1", default-features = false }
imageproc = { version = "0.24.0", default-features = false }
rand = "0.8.5"
similarity-least-squares = "0.2.0"
rand_xoshiro = "0.6.0"
deri